--- a/src/sass/blocks/main/main.sass
+++ b/src/sass/blocks/main/main.sass
@@ -36,3 +36,28 @@
         font-size: 1.5em
         color: #363636
         text-shadow: 0 0 0.85em #ccc
+    &__radio
+        display: flex
+        justify-content: center
+        padding-top: .4rem
+        padding-bottom: .4rem
+        width: 100%
+        input
+            display: none
+        &-label
+            font-size: 0.9rem
+            line-height: 1
+            text-align: center
+            text-transform: uppercase
+            font-weight: 700
+            border: 1px solid #1779ba
+            border-radius: .4rem
+            color: #1779ba
+            width: 100%
+
+            margin: 0 0 1rem 0
+            padding: 0.85em 1em
+
+            cursor: pointer
+
+            transition: background-color 0.25s ease-out,color 0.25s ease-out
