--- a/src/sass/base/animation.sass
+++ b/src/sass/base/animation.sass
@@ -11,3 +11,11 @@
         -webkit-transform-origin: 50% 100%
         transform-origin: 50% 100%
         opacity: 1
+
+@keyframes blinker
+    0%
+        opacity: 1
+    50%
+        opacity: 0
+    100%
+        opacity: 1
