--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,9 +3,23 @@
     margin: 0
     padding: 0
     font-family: 'Poppins-Regular', sans-serif
+    &:focus
+        outline: none
+
+.wrapper
+    max-width: 875px!important
+    display: flex
+    justify-content: center
+    flex-flow: column wrap
+    text-align: center
+    max-width: 100%
+    margin: 0 auto
+
+    border-radius: .7em
+    border: 2px solid white
+    background: rgba(255, 255, 255, 0.7)
 
 @import base/fonts
-// Poppins-Bold Poppins-Regular BalooBhai
 @import base/animation
 @import blocks/main/main
 @import blocks/footer/footer
