--- a/src/sass/blocks/main/main.sass
+++ b/src/sass/blocks/main/main.sass
@@ -143,6 +143,11 @@
         font-weight: 700
         padding: 0 0 0 .5em
         margin: 35px 0 10px
+
+    .dateErr
+        border-bottom: 2px solid #c71414 !important
+        background-color: #faebeb!important
+
     .mt
         margin: 22px 0 0
 
