--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,9 +12,7 @@
     justify-content: center
     flex-flow: column wrap
     text-align: center
-    max-width: 100%
     margin: 0 auto
-
     border-radius: .7em
     border: 2px solid white
     background: rgba(255, 255, 255, 0.7)
@@ -22,4 +20,5 @@
 @import base/fonts
 @import base/animation
 @import blocks/main/main
+@import blocks/main/main-media
 @import blocks/footer/footer
