added modal windows

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,11 @@
     &:focus
         outline: none
 
+body
+    position: relative
+    background: url(../img/bg-barilla.jpg) top right/cover no-repeat
+    background-attachment: fixed
+
 .wrapper
     max-width: 875px!important
     display: flex
@@ -22,3 +27,4 @@
 @import blocks/main/main
 @import blocks/main/main-media
 @import blocks/footer/footer
+@import blocks/modal/modal
