--- a/src/sass/blocks/footer/footer.sass
+++ b/src/sass/blocks/footer/footer.sass
@@ -1,10 +1,15 @@
 .footer
-    margin: 16px auto 0
+    margin: 1em auto 2em
     font-size: 0.6em
     line-height: 1.6
-    padding: 6.4px 4em
+    padding: 1em 4em
     p
         margin: 0 0 1.5em
     &__links
-        a
-            text-decoration: underline
+        display: flex
+        justify-content: space-between
+        text-decoration: underline
+        width: 11rem
+        margin: 0 auto
+        div
+            cursor: pointer
